--- a/.github/workflows/render.yml
+++ b/.github/workflows/render.yml
@@ -25,6 +25,8 @@ jobs:
       
       - name: Optimize image
         uses: 9sako6/imgcmp@master
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Commit rendered
         uses: stefanzweifel/git-auto-commit-action@v2.5.0
