--- a/.github/workflows/render.yml
+++ b/.github/workflows/render.yml
@@ -6,6 +6,7 @@ on:
       - master
     paths:
       - '**.puml'
+      - '**.yml'
 
 jobs:
   render:
@@ -21,6 +22,11 @@ jobs:
         uses: lokkju/github-action-plantuml@v0.0.1
         with:
           args: "synopsis.puml"
+      
+      - name: Optimize image
+        uses: docker://calibreapp/github-image-actions
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Commit rendered
         uses: stefanzweifel/git-auto-commit-action@v2.5.0
